--- a/app/src/main/res/layout/activity_location_tracking_screen.xml
+++ b/app/src/main/res/layout/activity_location_tracking_screen.xml
@@ -12,5 +12,61 @@
         android:layout_gravity="center"
         android:layout_height="match_parent"
         />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="5dp">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginBottom="2dp"
+        >
+
+        <Button
+            android:id="@+id/btnTurnOn"
+            android:layout_width="0dp"
+            android:layout_height="65dp"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:text="@string/track_on"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/btnTurnOff"
+            android:layout_width="0dp"
+            android:layout_height="65dp"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:text="@string/track_off"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/btnPauseResume"
+            android:layout_width="0dp"
+            android:layout_height="65dp"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:text="@string/pause"
+            android:layout_margin="2dp"/>
+
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btnDetails"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_weight="1"
+        android:background="@color/white"
+        android:text="@string/trips_history"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_alignParentBottom="true"
+        />
+
+    </LinearLayout>
 </RelativeLayout>
