--- a/app/src/main/res/layout-xxhdpi/activity_sign_in.xml
+++ b/app/src/main/res/layout-xxhdpi/activity_sign_in.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/sign_up"
+            android:text="Sign In"
             android:textSize="20sp"
             android:textColor="@color/red_theme"
 
@@ -99,7 +99,21 @@
             android:layout_marginTop="130dp"
             android:background="@drawable/curved_button"
             android:textColor="@android:color/white"
-            android:text="@string/done" />
+            android:text="@string/sign_in" />
+
+
+        <TextView
+            android:id="@+id/txtSignUp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#C62828"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textSize="17sp"
+            android:text="@string/sign_up" />
 
 
     </LinearLayout>
